Fixed footer overlap

--- a/home/static/home/style.css
+++ b/home/static/home/style.css
@@ -10,14 +10,18 @@ html {
 }
 
 body {
-  padding-bottom: 120px; /* Margin bottom by footer height - to not overlap with above content*/
+  padding-bottom: 170px; /* Margin bottom by footer height - to not overlap with above content*/
 }
 
 #foot {
   position: absolute;
   bottom: 0;
   width: 100%;
-  height: 180px; /* Set the fixed height of the footer here */
+  height: 150px; /* Set the fixed height of the footer here */
   background-color: #f5f5f5;
 
+}
+
+#ta {
+    resize: none;
 }
